# hbc

./: Cargo.toml
crates/flatpak-sys/: Cargo.toml  Gir.toml  build.rs  regen.sh
crates/flatpak-sys/src/: lib.rs
crates/flatpak-sys/tests/: abi.rs  constant.c  layout.c  manual.h
src/: main.rs  serde_utils.rs  steam.rs
src/serde_utils/: deserialize_map_values.rs
src/steam/: binary_vdf.rs  id.rs  text_vdf.rs
src/steam/binary_vdf/: de.rs  ser.rs  token_deserializer.rs  token_serializer.rs
src/steam/id/: app_id.rs  legacy_app_id.rs  steam_id.rs
