[package]
name = "hbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
crc = "3.0.0"
derive_deref = "1.1.1"
dirs = "4.0.0"
enum-primitive-derive = "0.2.2"
indexmap = { version = "1.9.1", features = ["serde"] }
keyvalues-serde = "0.1.0"
num-traits = "0.2.15"
serde = { version = "1.0.139", features = ["derive"] }
serde-value = "0.7.0"
serde_json = "1.0.82"
steamlocate = "1.0.1"
vdf-serde = "0.3.0"
flatpak-sys = { path = "crates/flatpak-sys" }

[workspace]
members = ["crates/*"]
